apps/jellyfin/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-lb
spec:
  ports:
    - protocol: TCP
      port: 8096
      targetPort: 8096
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: jellyfin
