apps/jellyfin/base/ingress-external.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-secure
spec:
  entryPoints:
    - websecure-external
  routes:
    - match: Host(`jellyfin.mimotej.stream`)
      kind: Rule
      middlewares:
        - name: middleware-crowdsec
          namespace: traefik
        - name: middleware-geoblock
          namespace: traefik
        - name: jellyfin-middleware-headers
      services:
        - name: jellyfin
          port: 8096
  tls:
    secretName: jellyfin-tls
