apps/jellyfin/base/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin

spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jellyfin.internal`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
